@@ -9,6 +9,8 @@ from typing import Callable
 import requests
 from requests_toolbelt import MultipartEncoder, MultipartEncoderMonitor
 
+from ..common import ConnectionTimeoutErrors
+
 from .errors import (
     APIBadRequest, APIConflictError, APINotFoundError, NoS3UploadAvailableError
 )
@@ -31,14 +33,22 @@ def dataset_activate(dataset_id: str, api: CKANAPI):
     api: dcoraid.api.CKANAPI
         API instance with server, api_key (and optional certificate)
     """
-    revise_dict = {
-        "match": {"id": dataset_id},
-        "update": {"state": "active"}}
-    api.post("package_revise",
-             revise_dict,
-             # Dataset activation may take long when there are a lot of
-             # resources.
-             timeout=500)
+    try:
+        # First check whether the dataset is already active. Use a long
+        # timeout for this critical step.
+        ds_dict = api.get("package_show", id=dataset_id, timeout=500)
+    except ConnectionTimeoutErrors:
+        raise
+    else:
+        if not ds_dict["state"] == "active":
+            revise_dict = {
+                "match": {"id": dataset_id},
+                "update": {"state": "active"}}
+            api.post("package_revise",
+                     revise_dict,
+                     # Dataset activation may take long when there
+                     # are a lot of resources.
+                     timeout=500)
 
 
 def dataset_create(dataset_dict, api, resources=None,
